--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
-body {background-color:black;} {font-family:arial} {font-color:white}
-h1{color:grey;} {font-family:verdana}
-.maindiv {background-color:white;} {font-color:black} {width:300px} {padding:20px} {border-radius:25px} {align:center}
+body {background-color:black; font-family: arial; color:white;}
+h1{color:grey; font-family:verdana;}
+.maindiv{
+    background-color:white;
+    color:black;
+    width:300px;
+    padding:20px;
+    border-radius:25px;
+    align:center;
+    }
+
 
 
 
